<resources>
    <string name="app_name">Imd_Market</string>
    <string name="app_title">IMDMARKET</string>

    <!-- MAIN ACTIVITY -->
    <string name="login_lable">Login:</string>
    <string name="password_lable">Senha:</string>
    <string name="sign_in_button">ENTRAR</string>
    <string name="forgot_password">Esqueci minha senha</string>

    <!-- CHANGE PASSWORD ACTIVITY-->
    <string name="change_password_title">ALTERAR SENHA</string>
    <string name="new_password_lable">Nova senha:</string>
    <string name="change_password_button">Alterar</string>

    <!-- HOME ACTIVITY-->
    <string name="home_question">O que deseja fazer?</string>
    <string name="create_product_button">Cadastrar produto</string>
    <string name="list_products_button">Listar produtos</string>
    <string name="update_product_button">Alterar produto</string>
    <string name="delete_product_button">Deletar produtos</string>

    <!-- CREATE PRODUCT ACTIVITY-->
    <string name="create_product_title">CADASTRAR PRODUTO</string>
    <string name="save_product_button">Salvar</string>

    <!-- UPDATE PRODUCT ACTIVITY -->
    <string name="update_product_title">ALTERAR PRODUTO</string>
    <string name="change_product_button">Alterar</string>

    <!-- DELETE PRODUCT ACTIVITY -->
    <string name="delete_product_title">DELETAR PRODUTO</string>
    <string name="remove_product_button">Deletar</string>

    <!-- LIST PRODUCTS ACTIVITY -->
    <string name="list_product_title">LISTA DE PRODUTOS</string>
    <string name="back_to_home">Voltar</string>


    <!-- PRODUCT FORM LABELS -->
    <string name="form_product_code">Código do produto:</string>
    <string name="form_product_name">Nome do produto:</string>
    <string name="form_product_description">Descrição do produto:</string>
    <string name="form_product_stock">Estoque:</string>
    <string name="clear_form">Limpar</string>

</resources>