<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.HomeActivity">

    <Button
        android:id="@+id/deleteProductNav"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary"
        android:text="@string/delete_product_button"
        app:layout_constraintStart_toEndOf="@+id/updateProductNav"
        app:layout_constraintTop_toBottomOf="@+id/listProductsNav" />

    <Button
        android:id="@+id/updateProductNav"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary"
        android:text="@string/update_product_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProductNav" />

    <Button
        android:id="@+id/listProductsNav"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:background="@color/primary"
        android:text="@string/list_products_button"
        app:layout_constraintStart_toEndOf="@+id/createProductNav"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/home_question"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <Button
        android:id="@+id/createProductNav"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:background="@color/primary"
        android:text="@string/create_product_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>